# visplay

./: .buildinfo  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README  README.md  README.rst  assets.yaml.example  config-layout.html  config.yaml.example  control.proto  example.sources.yml  example_config.json  flowChart.tex  genindex.html  index.html  objects.inv  playlists.example.yml  playlists.yaml.example  project-organization.html  protocol.proto  quickstart.html  search.html  searchindex.js  setup.py  sources.yaml.example  video.ini  visplay.yaml.example  youtube.sources.yml
_sources/: index.rst.txt
api/: visplay.config.html  visplay.html  visplay.media.html  visplay.qt_test.html  visplay.setup_sources.html  visplay.sources.html
build-visplay-gui-Qt_5_9_4_System-Debug/: Makefile  Makefile.build-visplay-gui-Qt_5_9_4_System-Debug  build-visplay-gui-Qt_5_9_4_System-Debug.pro  libvisplaygui.so.1.0  libvisplaygui.so.1.0.0  moc_mpvwidget.cpp  moc_visplaycontroller.cpp  moc_visplaygui.cpp  qt_test.py
docs/: conf.py  config-layout.rst  data.rst  index.rst  project-organization.rst  quickstart.rst
fixtures/: acm.yml  sources.yml
libvis/: Cargo.toml
libvis/src/: lib.rs
libvis_py/: Cargo.toml  setup.py
libvisplaygui/: Makefile  README.md  build.sh  gui.cpp  gui.h  mpvwidget.cpp  mpvwidget.h  qt_test.py  visplay-gui.pro  visplay-gui.pro.user.39b516b  visplay-gui_global.h  visplaycontroller.cpp  visplaygui.cpp  (+2 more)
visplay-host/: Cargo.toml  example_config.json
visplay-host/src/: bs.rs  main.rs
visplay-host/src/config/: mod.rs
visplay-host/src/xsystem/: mod.rs
(+30 files in other folders)
