[package]
name = "visplay-host"
version = "0.1.0"
authors = ["Sam Sartor <me@samsartor.com>"]

[dependencies]
clap = "~2"

log = "~0.3"
simplelog = "*"

zombie = "0.0.4"
x11-dl = "~2"
libc = "*"

lazy_static = "*"

serde = "~0.9"
serde_derive = "~0.9"
serde_json = "~0.9"

rocket = "~0.2"
rocket_codegen = "~0.2"
rocket_contrib = "~0.2"