[package]
name = "libvis"
version = "0.0.0"
authors = ["Mines ACM"]

[lib]
name = "vis"

[dependencies]
diesel = { version = "1.1", features = ["sqlite"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
rmp-serde = "0.13"
failure = "0.1"
hyper = "0.11"
mime = "0.3"
mime_guess = "2.0.0-alpha"

[dependencies.easy_uri]
git = "https://github.com/samsartor/easy_uri"
version = "0.1"
features = ["serialize"]
